# football-manager

./: .env.example  .gitignore  README.md  pyproject.toml
fantasy_assistant/: __init__.py  agent.py  cli.py  config.py  context.py  news_client.py  players.py  sleeper_client.py  tools.py
tests/: conftest.py  test_agent.py  test_context.py  test_news_client.py  test_players.py  test_sleeper_client.py  test_tools.py
