[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fantasy-assistant"
version = "0.1.0"
description = "A Claude-powered assistant manager for Sleeper fantasy football leagues"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
]

[project.optional-dependencies]
dotenv = ["python-dotenv>=1.0"]
dev = ["pytest>=8.0", "python-dotenv>=1.0"]

[project.scripts]
fantasy-assistant = "fantasy_assistant.cli:main"

[tool.setuptools.packages.find]
include = ["fantasy_assistant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
